--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+.vscode/
+
+/firmware/pic32_picosecond_delay_control.X/.generated_files/
+/firmware/pic32_picosecond_delay_control.X/build/
+/firmware/pic32_picosecond_delay_control.X/debug/
+/firmware/pic32_picosecond_delay_control.X/dist/
+/firmware/pic32_picosecond_delay_control.X/nbproject/private/
+/firmware/pic32_picosecond_delay_control.X/nbproject/Makefile-*
+/firmware/pic32_picosecond_delay_control.X/nbproject/Package-*
