--- a/firmware/src/config/default/default.mhc/adc.yml
+++ b/firmware/src/config/default/default.mhc/adc.yml
@@ -12,7 +12,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
     - type: Values
       children:
       - type: User
@@ -30,7 +30,14 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'false'}
+        attributes: {value: 'true'}
+  - type: KeyValueSet
+    attributes: {id: AD1CON2__SMPI}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '2'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_0}
     children:
@@ -39,7 +46,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_1}
     children:
@@ -48,7 +55,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_10}
     children:
@@ -57,7 +64,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_11}
     children:
@@ -66,7 +73,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_12}
     children:
@@ -75,7 +82,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_13}
     children:
@@ -84,7 +91,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_14}
     children:
@@ -93,7 +100,11 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_15}
     children:
@@ -102,7 +113,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_16}
     children:
@@ -111,7 +122,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_17}
     children:
@@ -120,7 +131,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_18}
     children:
@@ -129,7 +140,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_19}
     children:
@@ -138,7 +149,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_2}
     children:
@@ -147,7 +158,11 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'false'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_20}
     children:
@@ -156,7 +171,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_21}
     children:
@@ -165,7 +180,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_22}
     children:
@@ -174,7 +189,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_23}
     children:
@@ -183,7 +198,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_3}
     children:
@@ -192,7 +207,11 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_4}
     children:
@@ -201,7 +220,11 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_5}
     children:
@@ -210,7 +233,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_6}
     children:
@@ -219,7 +242,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_7}
     children:
@@ -228,7 +251,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_8}
     children:
@@ -237,7 +260,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_9}
     children:
@@ -246,7 +269,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Hex
     attributes: {id: ADC_AD1CHS}
     children:
@@ -267,7 +290,14 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: adc, value: '0'}
+        attributes: {id: adc, value: '1032'}
+  - type: Hex
+    attributes: {id: ADC_AD1CSSL}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: adc, value: '16408'}
   - type: Boolean
     attributes: {id: ADC_INTERRUPT}
     children:
