--- a/firmware/src/config/default/default.mhc/adc.yml
+++ b/firmware/src/config/default/default.mhc/adc.yml
@@ -211,7 +211,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'true'}
+        attributes: {value: 'false'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_4}
     children:
@@ -224,7 +224,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'true'}
+        attributes: {value: 'false'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_5}
     children:
@@ -234,6 +234,10 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_6}
     children:
@@ -243,6 +247,10 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_7}
     children:
@@ -297,7 +305,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: adc, value: '16408'}
+        attributes: {id: adc, value: '16480'}
   - type: Boolean
     attributes: {id: ADC_INTERRUPT}
     children:
