--- a/firmware/src/config/default/default.mhc/core.yml
+++ b/firmware/src/config/default/default.mhc/core.yml
@@ -61,19 +61,47 @@ children:
       - type: User
         attributes: {value: DIGITAL}
   - type: String
+    attributes: {id: BSP_PIN_14_FUNCTION_NAME}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: GPIO_RB1_CLICK_INT}
+  - type: String
     attributes: {id: BSP_PIN_14_FUNCTION_TYPE}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: AN3}
+        attributes: {value: GPIO}
+  - type: String
+    attributes: {id: BSP_PIN_14_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: DIGITAL}
+  - type: String
+    attributes: {id: BSP_PIN_15_FUNCTION_NAME}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: GPIO_RB2_CLICK_CS}
   - type: String
     attributes: {id: BSP_PIN_15_FUNCTION_TYPE}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: AN4}
+        attributes: {value: GPIO}
+  - type: String
+    attributes: {id: BSP_PIN_15_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: DIGITAL}
   - type: String
     attributes: {id: BSP_PIN_18_MODE}
     children:
@@ -88,6 +116,34 @@ children:
       children:
       - type: User
         attributes: {value: DIGITAL}
+  - type: String
+    attributes: {id: BSP_PIN_21_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: U3CTS}
+  - type: String
+    attributes: {id: BSP_PIN_21_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: DIGITAL}
+  - type: String
+    attributes: {id: BSP_PIN_25_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: AN5}
+  - type: String
+    attributes: {id: BSP_PIN_26_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: AN6}
   - type: String
     attributes: {id: BSP_PIN_2_MODE}
     children:
@@ -123,6 +179,20 @@ children:
       children:
       - type: User
         attributes: {value: DIGITAL}
+  - type: String
+    attributes: {id: BSP_PIN_3_FUNCTION_NAME}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: GPIO_RB15_CLICK_PWM}
+  - type: String
+    attributes: {id: BSP_PIN_3_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: GPIO}
   - type: String
     attributes: {id: BSP_PIN_3_MODE}
     children:
@@ -207,6 +277,13 @@ children:
       children:
       - type: User
         attributes: {value: DIGITAL}
+  - type: String
+    attributes: {id: BSP_PIN_52_FUNCTION_NAME}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: POT}
   - type: String
     attributes: {id: BSP_PIN_52_FUNCTION_TYPE}
     children:
@@ -703,7 +780,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: '57345'}
+        attributes: {id: core, value: '57351'}
   - type: Hex
     attributes: {id: SYS_PORT_B_TRIS}
     children:
@@ -760,6 +837,19 @@ children:
       - type: User
         attributes: {value: '8'}
   - type: KeyValueSet
+    attributes: {id: SYS_PORT_PPS_INPUT_FUNCTION_1}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '6'}
+  - type: KeyValueSet
     attributes: {id: SYS_PORT_PPS_INPUT_PIN_0}
     children:
     - type: Attributes
@@ -772,6 +862,19 @@ children:
       children:
       - type: User
         attributes: {value: '20'}
+  - type: KeyValueSet
+    attributes: {id: SYS_PORT_PPS_INPUT_PIN_1}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '16'}
   - type: KeyValueSet
     attributes: {id: SYS_PORT_PPS_OUTPUT_FUNCTION_0}
     children:
@@ -940,6 +1043,13 @@ children:
         attributes: {id: uart3, value: 'true'}
   - type: Boolean
     attributes: {id: USE_PPS_INPUT_0}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
+  - type: Boolean
+    attributes: {id: USE_PPS_INPUT_1}
     children:
     - type: Values
       children:
