--- a/firmware/src/config/default/default.mhc/core.yml
+++ b/firmware/src/config/default/default.mhc/core.yml
@@ -54,6 +54,13 @@ children:
       - type: User
         attributes: {value: DIGITAL}
   - type: String
+    attributes: {id: BSP_PIN_13_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: AN2}
+  - type: String
     attributes: {id: BSP_PIN_13_MODE}
     children:
     - type: Values
@@ -138,12 +145,12 @@ children:
       - type: User
         attributes: {value: AN5}
   - type: String
-    attributes: {id: BSP_PIN_26_FUNCTION_TYPE}
+    attributes: {id: BSP_PIN_2_FUNCTION_TYPE}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: AN6}
+        attributes: {value: AN9}
   - type: String
     attributes: {id: BSP_PIN_2_MODE}
     children:
@@ -165,6 +172,13 @@ children:
       children:
       - type: User
         attributes: {value: DIGITAL}
+  - type: String
+    attributes: {id: BSP_PIN_37_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: AN15}
   - type: String
     attributes: {id: BSP_PIN_37_MODE}
     children:
