--- a/firmware/src/config/default/default.mhc/core.yml
+++ b/firmware/src/config/default/default.mhc/core.yml
@@ -110,34 +110,6 @@ children:
       - type: User
         attributes: {value: DIGITAL}
   - type: String
-    attributes: {id: BSP_PIN_16_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_16_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D3}
-  - type: String
-    attributes: {id: BSP_PIN_16_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
-    attributes: {id: BSP_PIN_16_MODE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: DIGITAL}
-  - type: String
     attributes: {id: BSP_PIN_18_MODE}
     children:
     - type: Values
@@ -157,7 +129,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: PS_D6}
+        attributes: {value: NS_LATCH}
   - type: String
     attributes: {id: BSP_PIN_19_FUNCTION_TYPE}
     children:
@@ -185,7 +157,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D2}
+        attributes: {value: DELAY_D2}
   - type: String
     attributes: {id: BSP_PIN_1_FUNCTION_TYPE}
     children:
@@ -213,7 +185,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: PS_D7}
+        attributes: {value: PS_LATCH}
   - type: String
     attributes: {id: BSP_PIN_20_FUNCTION_TYPE}
     children:
@@ -243,34 +215,6 @@ children:
       - type: User
         attributes: {value: DIGITAL}
   - type: String
-    attributes: {id: BSP_PIN_22_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_22_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D8}
-  - type: String
-    attributes: {id: BSP_PIN_22_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
-    attributes: {id: BSP_PIN_22_MODE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: DIGITAL}
-  - type: String
     attributes: {id: BSP_PIN_25_FUNCTION_TYPE}
     children:
     - type: Values
@@ -290,7 +234,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D0}
+        attributes: {value: DELAY_D0}
   - type: String
     attributes: {id: BSP_PIN_26_FUNCTION_TYPE}
     children:
@@ -318,7 +262,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D3}
+        attributes: {value: DELAY_D3}
   - type: String
     attributes: {id: BSP_PIN_27_FUNCTION_TYPE}
     children:
@@ -360,7 +304,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D4}
+        attributes: {value: DELAY_D4}
   - type: String
     attributes: {id: BSP_PIN_30_FUNCTION_TYPE}
     children:
@@ -432,55 +376,6 @@ children:
       - type: User
         attributes: {value: DIGITAL}
   - type: String
-    attributes: {id: BSP_PIN_40_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_40_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D9}
-  - type: String
-    attributes: {id: BSP_PIN_40_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
-    attributes: {id: BSP_PIN_40_MODE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: DIGITAL}
-  - type: String
-    attributes: {id: BSP_PIN_41_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_41_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D10}
-  - type: String
-    attributes: {id: BSP_PIN_41_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
     attributes: {id: BSP_PIN_41_MODE}
     children:
     - type: Values
@@ -502,27 +397,6 @@ children:
       - type: User
         attributes: {value: DIGITAL}
   - type: String
-    attributes: {id: BSP_PIN_44_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_44_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D4}
-  - type: String
-    attributes: {id: BSP_PIN_44_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
     attributes: {id: BSP_PIN_44_MODE}
     children:
     - type: Values
@@ -538,34 +412,6 @@ children:
         attributes: {value: SDA3}
   - type: String
     attributes: {id: BSP_PIN_46_MODE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: DIGITAL}
-  - type: String
-    attributes: {id: BSP_PIN_48_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_48_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D5}
-  - type: String
-    attributes: {id: BSP_PIN_48_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
-    attributes: {id: BSP_PIN_48_MODE}
     children:
     - type: Values
       children:
@@ -633,7 +479,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D1}
+        attributes: {value: DELAY_D1}
   - type: String
     attributes: {id: BSP_PIN_54_FUNCTION_TYPE}
     children:
@@ -643,34 +489,6 @@ children:
         attributes: {value: GPIO}
   - type: String
     attributes: {id: BSP_PIN_54_MODE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: DIGITAL}
-  - type: String
-    attributes: {id: BSP_PIN_58_DIR}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: Out}
-  - type: String
-    attributes: {id: BSP_PIN_58_FUNCTION_NAME}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: PS_D2}
-  - type: String
-    attributes: {id: BSP_PIN_58_FUNCTION_TYPE}
-    children:
-    - type: Values
-      children:
-      - type: User
-        attributes: {value: GPIO}
-  - type: String
-    attributes: {id: BSP_PIN_58_MODE}
     children:
     - type: Values
       children:
@@ -689,7 +507,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: PS_D1}
+        attributes: {value: DELAY_D9}
   - type: String
     attributes: {id: BSP_PIN_59_FUNCTION_TYPE}
     children:
@@ -738,7 +556,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D5}
+        attributes: {value: DELAY_D5}
   - type: String
     attributes: {id: BSP_PIN_64_FUNCTION_TYPE}
     children:
@@ -766,7 +584,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: PS_D0}
+        attributes: {value: DELAY_D8}
   - type: String
     attributes: {id: BSP_PIN_6_FUNCTION_TYPE}
     children:
@@ -794,7 +612,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D7}
+        attributes: {value: DELAY_D7}
   - type: String
     attributes: {id: BSP_PIN_7_FUNCTION_TYPE}
     children:
@@ -822,7 +640,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: NS_D6}
+        attributes: {value: DELAY_D6}
   - type: String
     attributes: {id: BSP_PIN_8_FUNCTION_TYPE}
     children:
@@ -1305,21 +1123,21 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: '65448'}
+        attributes: {id: core, value: '32680'}
   - type: Hex
     attributes: {id: SYS_PORT_B_ANSEL}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: '57359'}
+        attributes: {id: core, value: '57351'}
   - type: Hex
     attributes: {id: SYS_PORT_B_TRIS}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: '328'}
+        attributes: {id: core, value: '0'}
   - type: Hex
     attributes: {id: SYS_PORT_C_ANSEL}
     children:
@@ -1340,7 +1158,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: '30723'}
+        attributes: {id: core, value: '8195'}
   - type: Hex
     attributes: {id: SYS_PORT_D_LAT}
     children:
