--- a/firmware/src/config/default/default.mhc/adc.yml
+++ b/firmware/src/config/default/default.mhc/adc.yml
@@ -154,6 +154,10 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_2}
     children:
@@ -241,7 +245,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'true'}
+        attributes: {value: 'false'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_6}
     children:
@@ -313,7 +317,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: adc, value: '33316'}
+        attributes: {id: adc, value: '557572'}
   - type: Boolean
     attributes: {id: ADC_INTERRUPT}
     children:
