--- a/firmware/src/config/default/default.mhc/tmr1.yml
+++ b/firmware/src/config/default/default.mhc/tmr1.yml
@@ -10,21 +10,30 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tmr1, value: '304'}
+        attributes: {id: tmr1, value: '306'}
   - type: Integer
     attributes: {id: TIMER1_CLOCK_FREQ}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tmr1, value: '93750'}
+        attributes: {id: tmr1, value: '195312'}
+  - type: Integer
+    attributes: {id: TIMER1_EXT_CLOCK_FREQ}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
   - type: Long
     attributes: {id: TIMER1_PERIOD}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tmr1, value: '46874'}
+        attributes: {id: tmr1, value: '65535'}
   - type: KeyValueSet
     attributes: {id: TIMER1_PRE_SCALER}
     children:
@@ -32,6 +41,31 @@ children:
       children:
       - type: User
         attributes: {value: '0'}
+  - type: KeyValueSet
+    attributes: {id: TIMER1_SRC_SEL}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '0'}
+  - type: KeyValueSet
+    attributes: {id: TIMER1_TECS}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
+  - type: KeyValueSet
+    attributes: {id: TIMER1_TGATE}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'false'}
   - type: Float
     attributes: {id: TIMER1_TIME_PERIOD_MS}
     children:
@@ -40,11 +74,29 @@ children:
       - type: Float
         attributes: {id: max}
         children:
-        - {type: Value, value: '699.06134'}
+        - {type: Value, value: '335.5503'}
     - type: Values
       children:
       - type: User
         attributes: {value: '500.0'}
+  - type: KeyValueSet
+    attributes: {id: TIMER1_TSYNC}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
+  - type: KeyValueSet
+    attributes: {id: TIMER1_TWDIS}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
   - type: Integer
     attributes: {id: TMR1_PRESCALER_VALUE}
     children:
